WIP game - prepracovany formular TODO přidat automatické doplňování rounds

--- a/src/main/resources/templates/game_registration.html
+++ b/src/main/resources/templates/game_registration.html
@@ -22,8 +22,12 @@
                         <input type="date" class="form-control" th:field="*{date}" />
                     </div>
                     <div class="col-sm">
-                        <label>kolo</label>
-                        <input type="number" class="form-control" th:field="*{round}" />
+                        <label>kolo domácí</label>
+                        <input type="number" class="form-control" th:field="*{round_home}" />
+                    </div>
+                    <div class="col-sm">
+                        <label>kolo hosté</label>
+                        <input type="number" class="form-control" th:field="*{round_guest}" />
                     </div>
                     <div class="col-sm">
                         <label>domácí</label><br/>
