--- a/src/main/resources/templates/game_registration_success.html
+++ b/src/main/resources/templates/game_registration_success.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Registration success</title>
+    <title>GAME registration success</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 <body>
     <div align="center">
-        <h1>Registration Success</h1>
-        <samp>zápas: </samp><span th:text="${game.id}"></span>
-        <samp>  </samp><span th:text="${game.date}"></span>
-        <samp>  </samp><span th:text="${game.round}"></span><br/>
-        <samp>domácí:  </samp><span th:text="${game.home}"></span><br/>
-        <samp>hosté:  </samp><span th:text="${game.guest}"></span><br/>
+        <h1>GAME registration Success</h1></br>
+        <div class="row">
+            <div class="col-3"></div>
+                <table class="table col-6">
+                    <thead class="table-dark">
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">datum</th>
+                            <th scope="col">kolo domácí</th>
+                            <th scope="col">kolo hosté</th>
+                            <th scope="col">domácí</th>
+                            <th scope="col">hosté</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><span th:text="${game.id}"></span></td>
+                            <td><span th:text="${game.date}"></span></td>
+                            <td><span th:text="${game.round_home}"></span></td>
+                            <td><span th:text="${game.round_guest}"></span></td>
+                            <td><span th:text="${game.homeTeam}"></span></td>
+                            <td><span th:text="${game.guestTeam}"></span></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="col-1"></div>
+                <button type="button" class="btn btn-outline-primary">
+                    <a class="btn btn-primary" href="http://localhost:8080/game_registration" role="button">zpět na zádávání</a>
+                </button>
+            </div>
     </div>
     <div align="center">
-        <button type="button" class="btn btn-outline-primary">
-            <a class="btn btn-primary" href="http://localhost:8080/game_registration" role="button">zpět na zádávání</a>
-        </button>
+        <br/>
     </div>
 
 </body>
