WIP - game - vyplnovani a ulozeni do Game.class TODO - pridat gam SAVE jako tlacitko na game_filled.html

--- a/src/main/resources/templates/game_fill.html
+++ b/src/main/resources/templates/game_fill.html
@@ -11,6 +11,9 @@
         <div class="col" align="center">
             <h1>Game - vyplnění informací</h1>
         </div>
+        <div class="col" align="center">
+                <a class="nav-link" th:href="@{'http://localhost:8080/game_filled/'+${game.id}}"><button type="button" class="btn btn-outline-success">ULOŽIT HRU</button></a>
+        </div>
     </div>
 
     <div class="container col-10">
