--- a/src/main/resources/templates/player_registration.html
+++ b/src/main/resources/templates/player_registration.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Players registration</title>
+    <title>Players registration from GAME</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +14,7 @@
     </div>
 
     <div class="container">
-            <form  method="post" action="#" th:action="@{/player_registration}" th:object="${player}">
+            <form  method="post" action="#" th:action="@{'http://localhost:8080/game_fill/'+${gameID}}" th:object="${player}">
                 <div class="row row-cols">
                     <table class="table table-striped">
                         <thead>
@@ -46,10 +46,11 @@
                 </div>
             </form>
     </div>
+    <div class="container"> <br><br><br></div>
     <div class="container col-10">
         <div class="row">
             <div>
-                <h4>poslední přidaný hráč</h4>
+                <h5>poslední přidaný hráč</h5>
                 <table class="table table-striped">
                     <thead>
                     <tr>
