--- a/src/main/resources/templates/team_all_players_for_season.html
+++ b/src/main/resources/templates/team_all_players_for_season.html
@@ -6,24 +6,68 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <title>Team All Players</title>
+    <title th:text="@{${team.name} +' players '+ ${season}}"></title>
 </head>
+
 <body>
-    <div class="container" >
-        <div class="row row-cols-2">
+    <div class="container"><br>
+        <h3 class="text-danger" th:text="${message}"></h3>
+    </div>
+    <div class="container">
+        <div>
+            <h2><span th:text="@{${team.name} +' | players | season '+ ${season} + ' | count: ' +${listOfPlayers.size()}}"></span></h2>
+        </div>
+        <div>
+            <a class="btn btn-outline-primary" th:href="@{'http://localhost:8080/team_all_players_for_season/2018/'+${team.id}}" role="button">2018</a>
+            <a class="btn btn-outline-primary" th:href="@{'http://localhost:8080/team_all_players_for_season/2019/'+${team.id}}" role="button">2019</a>
+            <a class="btn btn-outline-primary disabled" th:href="@{'http://localhost:8080/team_all_players_for_season/2020/'+${team.id}}" role="button" aria-disabled="true">2020</a>
+            <a class="btn btn-outline-primary" th:href="@{'http://localhost:8080/team_all_players_for_season/2021/'+${team.id}}" role="button">2021</a>
+            <a class="btn btn-outline-warning" th:href="@{'http://localhost:8080/teams/'+${season}}" role="button">All teams</a>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row row-cols-10">
             <div class="col" align="right">
-                <table class="table table-striped">
+                <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th scope="col"><h2><span th:text="${team.name}"></span> ---- sezóna 2019</h2></th>
+                            <th scope="col">name</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr th:each="player : ${listOfPlayers}">
                             <td th:text="${player.name}"></td>
+                            <td>
+                                <a class="btn btn-sm btn-outline-danger" th:href="@{'http://localhost:8080/team_all_players_for_season/'+${season}+'/'+${team.id}+'/'+${player.id}+'d'}" role="button">DEL</a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="col-1"></div>
+            <div class="col">
+                <form  method="post" action="#" th:action="@{'http://localhost:8080/team_all_players_for_season/'+${season}+'/'+${team.id}}" th:object="${playerNew}">
+                    <div class="row row-cols">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">přidat hráče</th>
+                                <th scope="col"></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>
+                                    <input type="text" class="form-control" th:field="*{name}" />
+                                </td>
+                                <td>
+                                    <button type="submit" class="btn btn-outline-success">Register</button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
