--- a/src/main/resources/templates/teams.html
+++ b/src/main/resources/templates/teams.html
@@ -6,9 +6,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <title>Teams</title>
+    <title th:text="'NHL | Teams '+${season}"></title>
 </head>
 <body>
+    <div class="container">
+        <h2 class="row" th:text="'Teamy pro sezónu '+${season}"></h2>
+        <div>
+            <a class="btn btn-outline-dark" th:href="@{'http://localhost:8080/teams/2018'}" role="button">2018</a>
+            <a class="btn btn-outline-dark" th:href="@{'http://localhost:8080/teams/2019'}" role="button">2019</a>
+            <a class="btn btn-outline-dark disabled" th:href="@{'http://localhost:8080/teams/2020'}" role="button" aria-disabled="true">2020</a>
+            <a class="btn btn-outline-dark" th:href="@{'http://localhost:8080/teams/2021'}" role="button">2021</a>
+        </div>
+    </div>
     <div class="container">
         <div><br></div>
         <div class="row bg-danger text-white" align="center">
@@ -24,7 +33,9 @@
                     </thead>
                     <tbody>
                         <tr th:each="team : ${Atlantic}">
-                            <td th:text="${team}"></td>
+                            <td>
+                                <a th:href="@{'http://localhost:8080/team_all_players_for_season/'+${season}+'/'+${team.id}}" class="link-dark text-decoration-none" th:text="${team.name}"></a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -38,7 +49,9 @@
                     </thead>
                     <tbody>
                         <tr th:each="team : ${Metropolitan}">
-                            <td th:text="${team}"></td>
+                            <td>
+                                <a th:href="@{'http://localhost:8080/team_all_players_for_season/'+${season}+'/'+${team.id}}" class="link-dark text-decoration-none" th:text="${team.name}"></a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -57,7 +70,9 @@
                     </thead>
                     <tbody>
                         <tr th:each="team : ${Central}">
-                            <td th:text="${team}"></td>
+                            <td>
+                                <a th:href="@{'http://localhost:8080/team_all_players_for_season/'+${season}+'/'+${team.id}}" class="link-dark text-decoration-none" th:text="${team.name}"></a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -71,7 +86,9 @@
                     </thead>
                     <tbody>
                         <tr th:each="team : ${Pacific}">
-                            <td th:text="${team}"></td>
+                            <td>
+                                <a th:href="@{'http://localhost:8080/team_all_players_for_season/'+${season}+'/'+${team.id}}" class="link-dark text-decoration-none" th:text="${team.name}"></a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
