přidáno zapisování "p" do výsledku v případě remízy

--- a/src/main/resources/templates/game_fill.html
+++ b/src/main/resources/templates/game_fill.html
@@ -67,7 +67,7 @@
                     <tbody>
                         <tr>
                             <td class="col-1">
-                                <input type="text" class="form-control form-control-sm form-control" th:field="*{minute}" />
+                                <input type="text" class="form-control-sm form-control" th:field="*{minute}" />
                             </td>
                             <td class="col-1">
                                 <select class="form-select" th:field="*{author}" >
