game_fill změněn výběr hráčů, aby ukazoval nejdříve příjmení potom jméno

--- a/src/main/resources/templates/game_filled.html
+++ b/src/main/resources/templates/game_filled.html
@@ -12,6 +12,9 @@
             <div class="col" align="center">
                 <h1>Game overview</h1>
             </div>
+            <div>
+                <a class="btn btn-sm btn-outline-primary" th:href="@{'http://localhost:8080/games/'+${game.season}}" role="button">back to games</a>
+            </div>
         </div>
         <div class="row col-12">
             <div class="col-1"></div>
