--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -6,23 +6,62 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <title>Games 2018</title>
+    <title th:text="@{'Games '+ ${season}}"></title>
 </head>
 <body>
     <div class="container">
         <div><br></div>
-        <div class="row bg-dark text-white" align="center">
-            <h2>Seznam her - sezona 2018</h2>
+        <div class="text-dark" align="center">
+            <h2 th:text="@{'Seznam her - sezona '+ ${season} +' | celkem: '+${gameList.size()}}"></h2>
         </div>
+        <div>
+<!--            <form  method="GET" action="#" th:action="@{'http://localhost:8080/games/'+ ${season} +'/'+ ${}}">-->
+<!--                <table class="table col-5">-->
+<!--                    <thead class="table-primary">-->
+<!--                        <tr>-->
+<!--                            <th scope="col">domácí</th>-->
+<!--                            <th scope="col">hosté</th>-->
+<!--                            <th scope="col"></th>-->
+<!--                            <th scope="col"></th>-->
+<!--                        </tr>-->
+<!--                    </thead>-->
+<!--                    <tbody>-->
+<!--                        <tr>-->
+<!--                            <td class="col-1">-->
+<!--                                <select class="form-select" th:field="*{author}" >-->
+<!--                                    <option selected th:value="@{-1}"></option>-->
+<!--                                    <option th:each="d : ${home_players}" th:value="${d.id}" th:text="${d.name}"></option>-->
+<!--                                </select>-->
+<!--                            </td>-->
+<!--                            <td class="col-1">-->
+<!--                                <select class="form-select" th:field="*{assistance1}">-->
+<!--                                    <option selected th:value="@{-1}"></option>-->
+<!--                                    <option th:each="e : ${home_players}" th:value="${e.id}" th:text="${e.name}"></option>-->
+<!--                                </select>-->
+<!--                            </td>-->
+<!--                            <td class="col-1">-->
+<!--                                <button class="btn btn-primary btn-sm" type="submit">Filtruj</button>-->
+<!--                            </td>-->
+<!--                            <td class="col-1">-->
+<!--                                <button class="btn btn-primary btn-sm" type="submit">Filtruj</button>-->
+<!--                            </td>-->
+<!--                        </tr>-->
+<!--                    </tbody>-->
+<!--                </table>-->
+<!--            </form>-->
+        </div>
+    </div>
+    <div class="container">
         <div class="row row-cols">
             <div class="col" align="right">
-                <table class="table table-striped">
+                <table class="table table-hover">
                     <thead>
                         <tr>
                             <th scope="col">ID</th>
                             <th scope="col">datum</th>
                             <th scope="col">domácí</th>
                             <th scope="col">hosté</th>
+                            <th scope="col" class="col-1">výsledek</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -31,6 +70,7 @@
                             <td th:text="${game.date}"></td>
                             <td th:text="${game.home_team}"></td>
                             <td th:text="${game.guest_team}"></td>
+                            <td th:text="${game.vysledek}" align="center"></td>
                         </tr>
                     </tbody>
                 </table>
